# openrag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/benchmarks/: agentic_rag_v1.json
backend/migrations/: env.py
backend/migrations/versions/: 092163472775_workspaces.py  1c8d6db774d4_refresh_tokens.py  4b8e0f7a3c21_restartable_source_deletion.py  4f2e1c9a7b30_agent_runs_and_outbox.py  52039ca248c8_app_settings.py  6c4a2f8b9d10_capability_rbac.py  8176374a69ce_documents_and_ingest_jobs.py  87f43a702146_workspace_members.py  9d2c7a4e1f60_document_authority_and_citations.py  a0c2e4f6b8d1_refresh_citation_verifier_trigger.py  a2d4f6b8c0e1_allow_durable_legacy_ingestion.py  a4c6e8f0b2d3_remove_litellm_proxy_state.py  a4f87e62b913_harden_transactional_outbox.py  a6c8e1f3b5d7_run_context_ledger.py  a7c9e1f3b5d8_message_analytics_artifacts.py  ac802c65b29b_chats_messages_citations.py  b2d4f6a8c0e1_soft_delete_users.py  b3e5f7a9c1d2_embedding_profiles.py  b5098e4431cf_secrets.py  b5d7f9a1c3e4_model_capability_hierarchy.py  b7d5f3a1c9e8_lease_agent_runs.py  b7d9f2a4c6e8_branch_summary_jobs.py  c4f6a8b0d2e3_embedding_deployments.py  c6e8a0b2d4f5_evaluation_automation_policies.py  c7b9d1e3f5a6_model_capability_probes.py  c7fe9e0bbb68_invitations.py  c8e0a3b5d7f9_rag_operations_facts.py  c9a7e5d3b1f0_allow_durable_run_regeneration.py  d1e3f5a7b9c2_answer_quality_audits.py  d1f9b7e5c3a2_index_chat_discovery.py  d56c18224be3_orgs_and_users.py  d5a7c9e1f3b4_reindex_stage_identity.py  d8a4f2c91e37_fence_durable_ingest_stages.py  d9f1b4c6e8a0_rag_evaluations.py  e0c170e6d13b_audit_events.py  e2a4c6d8f0b1_scope_operations_indexes.py  e3a6c8f1b4d2_govern_user_memory.py  e4f6a8c0d2b3_designate_utility_model.py  e6b8d0f2a4c5_lease_embedding_deployments.py  ef917aaa945c_models_registry.py  (+6 more)
backend/scripts/: __init__.py  rbac_compose_smoke.py  smoke_run_events.py
backend/src/openrag/: bootstrap.py  cli.py
backend/tests/: conftest.py  test_bootstrap.py  test_compose.py  test_dockerfile.py  test_migrations.py  test_observability_config.py  test_scaffold.py
backend/tests/api/: __init__.py  test_admin_secrets.py  test_app_security.py  test_auth_routes.py  test_chat_backfill.py  test_chat_history.py  test_chat_stream.py  test_correlation.py  test_document_versions.py  test_documents_routes.py  test_embedding_profiles_routes.py  test_error_handlers.py  test_evaluations.py  test_health.py  test_invitations.py  test_memory_contract.py  test_models_routes.py  test_rag_operations.py  test_ratelimit.py  test_request_body_limit.py  test_roles.py  test_run_replay_unit.py  test_run_routes.py  test_search_route.py  test_tenant_context.py  test_usage.py  test_users.py  test_workspaces.py
backend/tests/architecture/: test_import_contracts.py  test_upload_boundaries.py
backend/tests/cli/: test_authority.py
backend/tests/core/: __init__.py  test_config.py  test_db.py  test_errors.py  test_logging.py  test_runtime_metrics.py  test_storage.py  test_telemetry.py  test_telemetry_export.py
backend/tests/integration/: test_document_authority_migration_boundary.py  test_event_streams.py  test_ingestion_e2e.py  test_upload_behavior_preserved.py
backend/tests/isolation/: conftest.py  test_chat_isolation.py  test_document_version_isolation.py  (+2 more)
(+548 files in other folders)
