[project]
name = "openrag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=13.0",
    "celery[redis]>=5.4",
    "cryptography>=42.0",
    "docling>=2.15",
    "fastapi>=0.111",
    "fastembed>=0.6",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.12",
    "redis>=5.0",
    "structlog>=24.1",
    "torch>=2.2",
    "torchvision>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres,redis,qdrant,minio]>=4.5",
    "python-docx>=1.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "import-linter>=2.0",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openrag"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["openrag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.importlinter]
root_package = "openrag"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = ["openrag.api", "openrag.worker", "openrag.modules", "openrag.core"]

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "aiobotocore.*",
    "botocore.*",
    "celery.*",
    "docling.*",
    "docling_core.*",
    "fastembed.*",
    "kombu.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openrag.worker.tasks"
disallow_untyped_decorators = false
